html content change

--- a/webpagesGL.html
+++ b/webpagesGL.html
@@ -1,13 +1,55 @@
 <!DOCTYPE html>
+<!--
+ -Wesley Boyce
+ -wjboyce2
+ -September 19, 2024
+ -Guided Lab 4
+ -Guided lab Assignment, about me webpage
+
+-->
 <html lang="en-US">
 
     <head>
         <meta charset="UTF-8" />
-        <title>My test page</title>
+        <title>About Wesley Boyce</title>
+        <ling href="webpagesGL.css" res="stylesheet" type="text/css" />
     </head>
     
     <body>
-    <p>This is my page</p>    
+        <!--Here is our welcome message-->
+        <header>
+            <h2>Welcome to my about me page!</h2>
+        </header>
+
+        <hr />
+
+        <!-- A photo I like -->
+        <img src="hunt_library_photo.jpeg" alt="A photo of hunt library at sundwon.">
+
+        <p>When I walk through campus, I really enjoy the walk from Case Dining hall to the library. I like to go through the free expression tunnel to see if there is anything interesting on the walls.</p>    
+
+        <br />
+        <br />
+
+        <h4>A list of my favorite things</h4>
+
+        <ul>
+            <li>Socceer</li>
+            <li>Spikeball</li>
+            <li>Math</li>
+            <li>Rocket League</li>
+            <li>Pizza</li>
+        </ul>
+
+        <br />
+
+        <table>
+            <tr><th>Wesley Boyce</th> <th>Tall, Cool, Hard-Working</th></tr>
+            <tr><td>Arnold Schwarzenegger</td> <td>Extremely Jacked</td></tr>
+            <tr><td>Isaac Newton</td> <td>Smartest Man to Date</td></tr>
+        </table>
+
+        <a href="https://wolfare.ncsu.edu" target="blank">Moodle</a>
 
     </body>
 </html>
