--- a/webpagesGL.html
+++ b/webpagesGL.html
@@ -15,7 +15,7 @@
         <ling href="webpagesGL.css" res="stylesheet" type="text/css" />
     </head>
     
-    <body>
+    <body style="background-color: #008473;">
         <!--Here is our welcome message-->
         <header>
             <h2>Welcome to my about me page!</h2>
@@ -26,7 +26,11 @@
         <!-- A photo I like -->
         <img src="hunt_library_photo.jpeg" alt="A photo of hunt library at sundwon.">
 
-        <p>When I walk through campus, I really enjoy the walk from Case Dining hall to the library. I like to go through the free expression tunnel to see if there is anything interesting on the walls.</p>    
+        <p>When I walk through campus, I really enjoy the walk from <em>Case Dining Hall</em> to the <em>Library</em>. I like to go through the <strong>free expression tunnel</strong> to see if there is anything interesting on the <em>walls</em>.</p>
+
+        <p>
+            C<sub>7</sub>H<sub>13</sub>N is a cool <del>molecule</del> <ins>Organic Compound</ins> called quinuclidine. E = mc<sup>2</sup> is the equation for energy.
+        </p>
 
         <br />
         <br />
