--- a/webpagesGL.html
+++ b/webpagesGL.html
@@ -24,10 +24,12 @@
         <hr />
 
         <!-- A photo I like -->
-        <img src="hunt_library_photo.jpeg" alt="A photo of hunt library at sundwon.">
+        <img src="hunt_library_photo.jpeg" alt="A photo of hunt library at sundwon." id="photo-resize">
 
+        <!--this is a route I like to take when I am going from breakfast to the library-->
         <p>When I walk through campus, I really enjoy the walk from <em>Case Dining Hall</em> to the <em>Library</em>. I like to go through the <strong>free expression tunnel</strong> to see if there is anything interesting on the <em>walls</em>.</p>
 
+        <!--this paragraph demonstrates the use of subscript styling in HTML using a chemical formula-->
         <p>
             C<sub>7</sub>H<sub>13</sub>N is a cool <del>molecule</del> <ins>Organic Compound</ins> called quinuclidine. E = mc<sup>2</sup> is the equation for energy.
         </p>
@@ -35,6 +37,7 @@
         <br />
         <br />
 
+        <!--this is an unordered list of some things I like to do-->
         <h4>A list of my favorite things</h4>
 
         <ul>
@@ -47,12 +50,14 @@
 
         <br />
 
-        <table>
+        <!--this is a table that describes three random people, and is styled as well-->
+        <table class="table-border">
             <tr><th>Wesley Boyce</th> <th>Tall, Cool, Hard-Working</th></tr>
             <tr><td>Arnold Schwarzenegger</td> <td>Extremely Jacked</td></tr>
             <tr><td>Isaac Newton</td> <td>Smartest Man to Date</td></tr>
         </table>
 
+        <!--this link will open a new tab in wolfware-->
         <a href="https://wolfare.ncsu.edu" target="blank">Moodle</a>
 
     </body>
